{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 130,
  "lineage": "52b68305-8a3b-7cfa-abad-4d2f647d1c72",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04dae17d682467314",
            "arn": "arn:aws:ec2:us-east-1:975050186080:elastic-ip/eipalloc-04dae17d682467314",
            "association_id": "eipassoc-03ba6b7217b76582d",
            "domain": "vpc",
            "id": "eipalloc-04dae17d682467314",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09d40e5920683db2c",
            "private_dns": "ip-10-0-1-47.ec2.internal",
            "private_ip": "10.0.1.47",
            "public_dns": "ec2-52-207-96-210.compute-1.amazonaws.com",
            "public_ip": "52.207.96.210",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_app_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01fccab91b456acc2",
            "arn": "arn:aws:ec2:us-east-1:975050186080:instance/i-0c33daa0f7cf8087b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "AmazonEC2apache",
            "id": "i-0c33daa0f7cf8087b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vijay",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01ea19370bc8cfb8d",
            "private_dns": "ip-10-0-2-71.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0802a570d0c591fd2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f60f7b450c99ae17"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027eb3cdaa9cee2fd",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f60f7b450c99ae17"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.EC2_apache",
            "aws_iam_role.Amazon_EC2_apache",
            "aws_security_group.webapp_sg",
            "aws_subnet.webapp",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050186080:internet-gateway/igw-03b829d480b99aac4",
            "id": "igw-03b829d480b99aac4",
            "owner_id": "975050186080",
            "tags": {
              "Name": "main-gateway"
            },
            "tags_all": {
              "Name": "main-gateway"
            },
            "vpc_id": "vpc-0e4473682ab309ff9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04dae17d682467314",
            "association_id": "eipassoc-03ba6b7217b76582d",
            "connectivity_type": "public",
            "id": "nat-0990c576991ae3d25",
            "network_interface_id": "eni-09d40e5920683db2c",
            "private_ip": "10.0.1.47",
            "public_ip": "52.207.96.210",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00946711b54efc571",
            "tags": {
              "Name": "main-nat"
            },
            "tags_all": {
              "Name": "main-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.dmz",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050186080:route-table/rtb-00067e682d2670321",
            "id": "rtb-00067e682d2670321",
            "owner_id": "975050186080",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0990c576991ae3d25",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4473682ab309ff9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.dmz",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050186080:route-table/rtb-049e2c2a0790296be",
            "id": "rtb-049e2c2a0790296be",
            "owner_id": "975050186080",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b829d480b99aac4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4473682ab309ff9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b2025b0f2be807c",
            "route_table_id": "rtb-049e2c2a0790296be",
            "subnet_id": "subnet-00946711b54efc571"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.dmz",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ce465171133b596",
            "route_table_id": "rtb-00067e682d2670321",
            "subnet_id": "subnet-027eb3cdaa9cee2fd"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.dmz",
            "aws_subnet.webapp",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f6739a6fdb8f470",
            "route_table_id": "rtb-00067e682d2670321",
            "subnet_id": "subnet-06026dc05c666a48c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.database",
            "aws_subnet.dmz",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b2025b0f2be807c",
            "route_table_id": "rtb-049e2c2a0790296be",
            "subnet_id": "subnet-00946711b54efc571"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.dmz",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webapp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050186080:security-group/sg-0f60f7b450c99ae17",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f60f7b450c99ae17",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240714080413418100000001",
            "name_prefix": "terraform-",
            "owner_id": "975050186080",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webapp-sg"
            },
            "tags_all": {
              "Name": "webapp-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4473682ab309ff9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050186080:subnet/subnet-06026dc05c666a48c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06026dc05c666a48c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050186080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "database-subnet"
            },
            "tags_all": {
              "Name": "database-subnet"
            },
            "vpc_id": "vpc-0e4473682ab309ff9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050186080:subnet/subnet-00946711b54efc571",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00946711b54efc571",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050186080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dmz-subnet"
            },
            "tags_all": {
              "Name": "dmz-subnet"
            },
            "vpc_id": "vpc-0e4473682ab309ff9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050186080:subnet/subnet-027eb3cdaa9cee2fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027eb3cdaa9cee2fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050186080",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webapp-subnet"
            },
            "tags_all": {
              "Name": "webapp-subnet"
            },
            "vpc_id": "vpc-0e4473682ab309ff9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050186080:vpc/vpc-0e4473682ab309ff9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f0385780d969497e",
            "default_route_table_id": "rtb-068f2893783e189ce",
            "default_security_group_id": "sg-01b3cc78baf652dec",
            "dhcp_options_id": "dopt-00a4d601d83e87b0d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e4473682ab309ff9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-068f2893783e189ce",
            "owner_id": "975050186080",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}